--- a/app/components/Live/Menu.less
+++ b/app/components/Live/Menu.less
@@ -42,12 +42,15 @@
 
 .Menu {
     width: 100%;
-    z-index: @zIndex__menuField;
 
     ._phone_
     & {
         height: @js__height__menu__phone;
     }
+}
+
+.MenuRow {
+    z-index: @zIndex__menuField;
 }
 
 .MenuTopRow {
